cmake_minimum_required(VERSION 3.17)
project(fortranproject Fortran)


enable_language(Fortran)
add_executable(fortranproject main.f90)
add_executable(test test.f90)
add_executable(2557 2557.f90)
add_executable(1000 1000.f90)
add_executable(1001 1001.f90)
add_executable(10998 10998.f90)
add_executable(1008 1008.f90)
add_executable(7287 7287.f90)
add_executable(2588 2588.f90)
add_executable(10872 10872.f90)
add_executable(1977 1977.f90)
add_executable(11098 11098.f90)
add_executable(5635 5635.f90)
add_executable(10828 10828.f90)
add_executable(2167 2167.f90)
add_executable(2167-2 2167-2.f90)
add_executable(2605 2605.f90)
add_executable(2914 2914.f90)
add_executable(4101 4101.f90)
add_executable(5337 5337.f90)
add_executable(5338 5338.f90)
add_executable(5339 5339.f90)
add_executable(11179 11179.f90)
add_executable(1629 1629.f90)
add_executable(1252 1252.f90)
add_executable(13420 13420.f90)
add_executable(11784 11784.f90)
add_executable(4347 4347.f90)
add_executable(15953 15953.f90)
add_executable(15954 15954.f90)
add_executable(15997 15997.f90)
add_executable(15998 15998.f90)
add_executable(9498 9498.f90)
add_executable(1002 1002.f90)
add_executable(1009 1009.f90)
add_executable(1032 1032.f90)
add_executable(1041 1041.f90)
add_executable(1051 1051.f90)
add_executable(1038 1038.f90)
add_executable(1850 1850.f90)
add_executable(1904 1904.f90)
add_executable(11931 11931.f90)
add_executable(5217 5217.f90)
add_executable(1729 1729.f90)